# type_theory

./: .gitignore
task1/: CMakeLists.txt
task1/Parser/: Abstraction.cpp  Abstraction.h  Application.h  Applicator.cpp  Expression.cpp  Expression.h  Variable.cpp  Variable.h
task1_4/: task4.cpp
task1_4/Normalization/: Normalization.h
task1_4/Parser/: Abstraction.cpp  Expression.h  Parser.cpp  Parser.h  Variable.h
task2/: CMakeLists.txt
task2/Parser/: Abstraction.cpp  Abstraction.h  Application.cpp  Application.h  Expression.h  Variable.cpp  Variable.h
task3/: CMakeLists.txt  main.cpp
task3/Parser/: Abstraction.cpp  Abstraction.h  Application.cpp  Application.h  Expression.cpp  Expression.h  Variable.cpp  Variable.h
task4/: CMakeLists.txt  task1.cpp  task2.cpp
task4/Normalization/: Normalization.cpp
task4/Parser/: Abstraction.h  Application.cpp  Application.h  Expression.cpp  Variable.cpp
tasks/: CMakeLists.txt  task3.cpp  task4.cpp  task5.cpp  task6.cpp
tasks/Normalization/: Normalization.cpp
tasks/Parser/: Abstraction.cpp  Abstraction.h  Application.cpp  Application.h  Expression.cpp  Expression.h  Parser.cpp  Variable.cpp  Variable.h
tasks/TermParser/: Function.cpp  Function.h  Term.cpp  Term.h  TermParser.cpp  TermParser.h  TermVariable.cpp  TermVariable.h
tasks/Typization/: Typization.cpp  Typization.h
tasks/Unification/: Equation.cpp  Equation.h  Unification.cpp  Unification.h
